--- a/roles/grafana_datasource/defaults/main.yml
+++ b/roles/grafana_datasource/defaults/main.yml
@@ -12,4 +12,4 @@ data_source:
     url: "http://{{ groups['prometheus'][0] }}:9090"
     user: "prom_user"
     password: "prometheus"
-    is_default: true
+    is_default: "true"
